--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       /* Zahlendrehung (dein Setup) */
       --rotSign: 1;
 
-      /* ROTATION STATE (bleibt unverändert) */
+      /* ROTATION STATE */
       --rot: 0deg;
     }
 
@@ -157,7 +157,6 @@
         inset  0  26px 40px rgba(0,0,0,0.30);
     }
 
-    /* Kugel */
     .ball{
       position:absolute;
       left: calc(var(--step) + ( (6 * var(--cell) + 5 * var(--cell-gap)) / 2 ));
@@ -175,16 +174,12 @@
       pointer-events: none;
     }
 
-    /* =========================================================
-       ROTATIONS-GRUPPE (dein aktueller Code: bleibt)
-       ========================================================= */
     .wFaceGroup{
       position:absolute;
       inset:0;
       z-index: 4;
       pointer-events:none;
 
-      /* Pivot im Board: Mitte = 4*step (bei 8x8) */
       --pivot-x: calc(4 * var(--step));
       --pivot-y: calc(4 * var(--step));
 
@@ -198,8 +193,8 @@
 
     .cubeShadow{
       position:absolute;
-      left: calc(1 * var(--step));  /* 2B */
-      top:  calc(1 * var(--step));  /* 2B */
+      left: calc(1 * var(--step));
+      top:  calc(1 * var(--step));
       width: calc(3 * var(--cell) + 2 * var(--cell-gap));
       height: calc(3 * var(--cell) + 2 * var(--cell-gap));
       z-index: 1;
@@ -234,8 +229,8 @@
         0 0 0 1px rgba(255,255,255,0.08) inset;
 
       z-index: 2;
-      left: calc(1 * var(--step));  /* 2B */
-      top:  calc(1 * var(--step));  /* 2B */
+      left: calc(1 * var(--step));
+      top:  calc(1 * var(--step));
     }
 
     .slot{
@@ -251,7 +246,6 @@
       border: var(--slot-border-w) solid var(--slot-border);
       border-radius: var(--cell-radius);
 
-      /* >>> übernommen aus Zahlen-Code: Slot-Ebene hart über allem in der Gruppe */
       z-index: 7;
 
       box-shadow:
@@ -268,14 +262,9 @@
       align-items:center;
       justify-content:center;
       user-select:none;
-
-      /* >>> sicher über Slot-Hintergrund */
       z-index: 9;
     }
 
-    /* ==========================
-       TYPO: Optik/Kerning (1:1 aus dem funktionierenden Zahlen-Code)
-       ========================== */
     .slot .num > span{
       display:inline-flex;
       align-items:center;
@@ -283,13 +272,9 @@
 
       font-weight: 900;
       color: #111;
-
-      /* aus funktionierendem Code */
       font-size: clamp(18px, 8vmin, 36px);
-
       text-shadow: 0 1px 0 rgba(255,255,255,0.35);
 
-      /* translate kommt VOR Rotation => Shift dreht mit */
       transform: rotate(var(--num-rot, 0deg)) translate(var(--opt-x, 0px), var(--opt-y, 0px));
       transform-origin: 50% 50%;
 
@@ -327,15 +312,13 @@
     .read-east  { --num-rot: calc(var(--rotSign) * -90deg); }
     .read-north { --num-rot: calc(var(--rotSign) * 180deg); }
 
-    /* Slot-Positionen für EIN Face in Q0 (dein Rotationscode) */
+    /* Slot-Positionen WFace */
     .s-3b{ left: calc(1 * var(--step)); top: calc(2 * var(--step)); }
     .s-4b{ left: calc(1 * var(--step)); top: calc(3 * var(--step)); }
     .s-2c{ left: calc(2 * var(--step)); top: calc(1 * var(--step)); }
     .s-2d{ left: calc(3 * var(--step)); top: calc(1 * var(--step)); }
 
-    /* =========================================================
-       KIP-GRUPPE (rotierend um Kugelmittelpunkt, 50% scaleX bleibt)
-       ========================================================= */
+    /* KIP Gruppe */
     .kipGroup{
       position:absolute;
       inset:0;
@@ -357,9 +340,9 @@
 
     .kipShadow{
       position:absolute;
-      left: calc(1 * var(--step));  /* 2B */
-      top:  calc(1 * var(--step));  /* 2B */
-      width: calc(6 * var(--cell) + 5 * var(--cell-gap)); /* über Q0+Q1 */
+      left: calc(1 * var(--step));
+      top:  calc(1 * var(--step));
+      width: calc(6 * var(--cell) + 5 * var(--cell-gap));
       height: calc(3 * var(--cell) + 2 * var(--cell-gap));
       background: transparent;
       z-index: 1;
@@ -370,7 +353,7 @@
 
     .kipEdgeCore{
       position:absolute;
-      left: calc(4 * var(--step));  /* Mittellinie D/E */
+      left: calc(4 * var(--step));
       top:  calc(1 * var(--step));
       width: 6px;
       height: calc(3 * var(--cell) + 2 * var(--cell-gap));
@@ -386,10 +369,9 @@
       opacity: 0.95;
     }
 
-    .kipFaceQ0{ left: calc(1 * var(--step)); top: calc(1 * var(--step)); } /* 2B */
-    .kipFaceQ1{ left: calc(4 * var(--step)); top: calc(1 * var(--step)); } /* 2E */
+    .kipFaceQ0{ left: calc(1 * var(--step)); top: calc(1 * var(--step)); }
+    .kipFaceQ1{ left: calc(4 * var(--step)); top: calc(1 * var(--step)); }
 
-    /* KIP-Slotpositionen (eindeutig, damit nichts kollidiert) */
     .k-4d{ left: calc(3 * var(--step)); top: calc(3 * var(--step)); }
     .k-3d{ left: calc(3 * var(--step)); top: calc(2 * var(--step)); }
     .k-2b{ left: calc(1 * var(--step)); top: calc(1 * var(--step)); }
@@ -400,7 +382,6 @@
     .k-2f{ left: calc(5 * var(--step)); top: calc(1 * var(--step)); }
     .k-2g{ left: calc(6 * var(--step)); top: calc(1 * var(--step)); }
 
-    /* Controls */
     .controls{
       width: 100%;
       display:flex;
@@ -438,21 +419,22 @@
   <div class="stage">
     <div class="board" id="board">
       <div class="floor" aria-hidden="true"></div>
-
       <div id="grid" class="grid" aria-label="8×8 Raster"></div>
 
-      <!-- ROTATION: W1 Paket -->
+      <!-- W Paket -->
       <div id="wFaceGroup" class="wFaceGroup" aria-label="W Paket">
         <div class="cubeShadow" aria-hidden="true"></div>
         <div class="cubeFace" aria-label="Würfelfläche"></div>
 
-        <div class="slot s-3b read-east"  data-slot="S1"><div class="num"><span></span></div></div>
-        <div class="slot s-4b read-east"  data-slot="S2"><div class="num"><span></span></div></div>
+        <!-- FIX 1: zwei Slots read-west statt read-east (Zahlenfuß zum Farbfeld links) -->
+        <div class="slot s-3b read-west"  data-slot="S1"><div class="num"><span></span></div></div>
+        <div class="slot s-4b read-west"  data-slot="S2"><div class="num"><span></span></div></div>
+
         <div class="slot s-2c read-north" data-slot="S3"><div class="num"><span></span></div></div>
         <div class="slot s-2d read-north" data-slot="S4"><div class="num"><span></span></div></div>
       </div>
 
-      <!-- KIP: korrekte KIP-Gruppe -->
+      <!-- KIP Gruppe -->
       <div id="kipGroup" class="kipGroup" aria-label="KIP Gruppe">
         <div class="kipShadow" aria-hidden="true"></div>
         <div class="kipEdgeCore" aria-hidden="true"></div>
@@ -460,13 +442,11 @@
         <div class="cubeFace kipFaceQ0" aria-label="Würfelfläche Q0"></div>
         <div class="cubeFace kipFaceQ1" aria-label="Würfelfläche Q1"></div>
 
-        <!-- linke Slots (leer) -->
         <div class="slot k-4d read-south" data-slot="W2_A"><div class="num"><span></span></div></div>
         <div class="slot k-3d read-south" data-slot="W2_B"><div class="num"><span></span></div></div>
         <div class="slot k-2b read-south" data-slot="W2_C"><div class="num"><span></span></div></div>
         <div class="slot k-2c read-south" data-slot="W2_D"><div class="num"><span></span></div></div>
 
-        <!-- rechte Seite: bekommt die aktuellen W1-Zahlen -->
         <div class="slot k-3e read-east"  data-slot="W1_1"><div class="num"><span></span></div></div>
         <div class="slot k-4e read-east"  data-slot="W1_2"><div class="num"><span></span></div></div>
         <div class="slot k-2f read-north" data-slot="W1_3"><div class="num"><span></span></div></div>
@@ -546,7 +526,7 @@
       grid.dataset.built = "1";
     }
 
-    // ===== Zahlenrendering (1:1 aus funktionierendem Code) =====
+    // ===== Zahlenrendering =====
     function setDot(span, number){
       if(!span) return;
       span.classList.remove("dot");
@@ -582,16 +562,17 @@
     }
 
     // =========================================================
-    // ROTATION (wie gehabt)
+    // FIX 2: Winkel (mod4) UND Zahlenflächen (mod3) entkoppelt
     // =========================================================
     let sets = [
       [0,0,0,0], // W1
       [0,0,0,0], // W2
       [0,0,0,0], // W3
-      [0,0,0,0], // 270° = wieder W1
     ];
 
-    let rotIndex = 0;
+    let rotIndex  = 0; // 0..3 => 0/90/180/270
+    let faceIndex = 0; // 0..2 => W1/W2/W3
+
     const rotDeg = [0, 90, 180, 270];
 
     const slotTargetsW = [
@@ -625,7 +606,7 @@
       wFace.style.setProperty("--rot", deg + "deg");
       kipGroup.style.setProperty("--rot", deg + "deg");
 
-      const nums = sets[rotIndex] || sets[0];
+      const nums = sets[faceIndex] || sets[0];
 
       for(let i=0;i<4;i++){
         renderNumber(slotTargetsW[i], nums[i]);
@@ -643,22 +624,24 @@
     function reroll12(){
       const twelve = getUniqueRandomNumbers(12, 0, 11);
 
-      sets[0] = twelve.slice(0,4);
-      sets[1] = twelve.slice(4,8);
-      sets[2] = twelve.slice(8,12);
-      sets[3] = sets[0].slice();
+      sets[0] = twelve.slice(0,4);   // W1
+      sets[1] = twelve.slice(4,8);   // W2
+      sets[2] = twelve.slice(8,12);  // W3
 
-      rotIndex = 0;
+      rotIndex  = 0;
+      faceIndex = 0;
       applyRotationAndNumbers();
     }
 
     function stepCW(){
-      rotIndex = (rotIndex + 1) % 4;
+      rotIndex  = (rotIndex + 1) % 4;
+      faceIndex = (faceIndex + 1) % 3;
       applyRotationAndNumbers();
     }
 
     function stepCCW(){
-      rotIndex = (rotIndex + 3) % 4;
+      rotIndex  = (rotIndex + 3) % 4;
+      faceIndex = (faceIndex + 2) % 3; // -1 mod 3
       applyRotationAndNumbers();
     }
 
@@ -681,11 +664,7 @@
 
     // ===== Buttons =====
     btnMix.addEventListener("click", reroll12);
-
-    btnKip50.addEventListener("click", () => {
-      setKipMode(!kipOn);
-    });
-
+    btnKip50.addEventListener("click", () => setKipMode(!kipOn));
     btnCW.addEventListener("click", stepCW);
     btnCCW.addEventListener("click", stepCCW);
 
