--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
       --gruen:   rgb(0, 166, 82);
       --orange:  rgb(249, 150, 30);
 
+      /* echtes 8×8 ohne Zwischenräume */
       --cell-gap: 0px;
       --cell-radius: 0px;
 
       --floor: #7a4a34;
 
+      /* Holz */
       --cube-wood-base: #d7c2a4;
       --cube-wood-deep: #c9b08f;
       --cube-wood-warm: rgba(155, 70, 110, 0.10);
       --cube-wood-gold: rgba(249, 150, 30, 0.10);
 
+      /* Innenrahmen */
       --w1-innerframe: rgba(122, 74, 52, 1);
 
       --slot-border: rgba(0,0,0,0.55);
@@ -36,7 +39,10 @@
       --btn-text: #2a160c;
       --btn-border: rgba(0,0,0,0.35);
 
+      /* Zahlendrehung (dein Setup) */
       --rotSign: 1;
+
+      /* ROTATION STATE */
       --rot: 0deg;
     }
 
@@ -306,11 +312,13 @@
     .read-east  { --num-rot: calc(var(--rotSign) * -90deg); }
     .read-north { --num-rot: calc(var(--rotSign) * 180deg); }
 
+    /* Slot-Positionen WFace */
     .s-3b{ left: calc(1 * var(--step)); top: calc(2 * var(--step)); }
     .s-4b{ left: calc(1 * var(--step)); top: calc(3 * var(--step)); }
     .s-2c{ left: calc(2 * var(--step)); top: calc(1 * var(--step)); }
     .s-2d{ left: calc(3 * var(--step)); top: calc(1 * var(--step)); }
 
+    /* KIP Gruppe */
     .kipGroup{
       position:absolute;
       inset:0;
@@ -413,16 +421,20 @@
       <div class="floor" aria-hidden="true"></div>
       <div id="grid" class="grid" aria-label="8×8 Raster"></div>
 
+      <!-- W Paket -->
       <div id="wFaceGroup" class="wFaceGroup" aria-label="W Paket">
         <div class="cubeShadow" aria-hidden="true"></div>
         <div class="cubeFace" aria-label="Würfelfläche"></div>
 
+        <!-- WFace: Zahlenfuß korrekt zum Farbfeld links -->
         <div class="slot s-3b read-west"  data-slot="S1"><div class="num"><span></span></div></div>
         <div class="slot s-4b read-west"  data-slot="S2"><div class="num"><span></span></div></div>
+
         <div class="slot s-2c read-north" data-slot="S3"><div class="num"><span></span></div></div>
         <div class="slot s-2d read-north" data-slot="S4"><div class="num"><span></span></div></div>
       </div>
 
+      <!-- KIP Gruppe -->
       <div id="kipGroup" class="kipGroup" aria-label="KIP Gruppe">
         <div class="kipShadow" aria-hidden="true"></div>
         <div class="kipEdgeCore" aria-hidden="true"></div>
@@ -430,13 +442,15 @@
         <div class="cubeFace kipFaceQ0" aria-label="Würfelfläche Q0"></div>
         <div class="cubeFace kipFaceQ1" aria-label="Würfelfläche Q1"></div>
 
-        <div class="slot k-4d read-south" data-slot="W2_A"><div class="num"><span></span></div></div>
-        <div class="slot k-3d read-south" data-slot="W2_B"><div class="num"><span></span></div></div>
-        <div class="slot k-2b read-south" data-slot="W2_C"><div class="num"><span></span></div></div>
-        <div class="slot k-2c read-south" data-slot="W2_D"><div class="num"><span></span></div></div>
+        <!-- W2-Links (Q0) -->
+        <div class="slot k-4d read-east"  data-slot="W2_A"><div class="num"><span></span></div></div>
+        <div class="slot k-3d read-east"  data-slot="W2_B"><div class="num"><span></span></div></div>
+        <div class="slot k-2b read-north" data-slot="W2_C"><div class="num"><span></span></div></div>
+        <div class="slot k-2c read-north" data-slot="W2_D"><div class="num"><span></span></div></div>
 
-        <div class="slot k-3e read-east"  data-slot="W1_1"><div class="num"><span></span></div></div>
-        <div class="slot k-4e read-east"  data-slot="W1_2"><div class="num"><span></span></div></div>
+        <!-- W1-Rechts (Q1) -->
+        <div class="slot k-3e read-west"  data-slot="W1_1"><div class="num"><span></span></div></div>
+        <div class="slot k-4e read-west"  data-slot="W1_2"><div class="num"><span></span></div></div>
         <div class="slot k-2f read-north" data-slot="W1_3"><div class="num"><span></span></div></div>
         <div class="slot k-2g read-north" data-slot="W1_4"><div class="num"><span></span></div></div>
       </div>
@@ -469,6 +483,7 @@
       boardEl.style.height = w + "px";
     }
 
+    // ===== Raster farbig =====
     const cols = ["A","B","C","D","E","F","G","H"];
     function key(r, cLetter){ return `${r}${cLetter}`; }
 
@@ -513,6 +528,7 @@
       grid.dataset.built = "1";
     }
 
+    // ===== Zahlenrendering =====
     function setDot(span, number){
       if(!span) return;
       span.classList.remove("dot");
@@ -547,16 +563,21 @@
       return pool.slice(0, count);
     }
 
+    // =========================================================
+    // W1/W2/W3 Zahlen (12er-Puls) + Rotation
+    // =========================================================
     let sets = [
       [0,0,0,0], // W1
       [0,0,0,0], // W2
       [0,0,0,0], // W3
     ];
 
-    let rotIndex  = 0;
-    let faceIndex = 0;
-
+    let rotIndex  = 0; // 0..3 => 0/90/180/270
+    let faceIndex = 0; // 0..2 => W1/W2/W3
     const rotDeg = [0, 90, 180, 270];
+
+    // +1 = CW, -1 = CCW
+    let plannedDir = +1;
 
     const slotTargetsW = [
       wFace.querySelector('[data-slot="S1"] .num > span'),
@@ -580,17 +601,14 @@
     ];
 
     // =========================================================
-    // NEU: KIP-Paare tauschen (Achse <-> Boxwand) pro 50%-Fläche
-    // perm [2,3,0,1] = "die unteren zwei rauf / die oberen zwei runter"
+    // FIX: KIP 50% -> Zahlenpaare tauschen (Achse <-> Boxrand)
+    // Slot-Reihenfolge in KIP-Arrays:
+    //   [0,1] = Achse-Paar, [2,3] = Boxrand-Paar
+    // Gewünscht: Paare als BLOCK tauschen, interne Reihenfolge bleibt
     // =========================================================
-    const swapPairsPerm = [2,3,0,1];
-
-    function renderSetIntoTargetsWithPerm(targets, nums, perm){
-      for(let i=0;i<4;i++){
-        const n = nums[perm ? perm[i] : i];
-        renderNumber(targets[i], n);
-        setDot(targets[i], n);
-      }
+    function mapForKip(nums){
+      // Achsen-Slots bekommen das bisherige Rand-Paar, Rand-Slots bekommen das bisherige Achsen-Paar
+      return [nums[2], nums[3], nums[0], nums[1]];
     }
 
     function applyRotationAndNumbers(){
@@ -598,17 +616,36 @@
       wFace.style.setProperty("--rot", deg + "deg");
       kipGroup.style.setProperty("--rot", deg + "deg");
 
+      // WFace: IMMER aktuelle Fläche (faceIndex) unverändert
       const curr = sets[faceIndex] || sets[0];
 
-      // W-Face bleibt 1:1
-      renderSetIntoTargetsWithPerm(slotTargetsW, curr, null);
+      for(let i=0;i<4;i++){
+        renderNumber(slotTargetsW[i], curr[i]);
+        setDot(slotTargetsW[i], curr[i]);
+      }
 
-      // KIP: rechte Fläche (aktuelle 4) + Paare tauschen
-      renderSetIntoTargetsWithPerm(slotTargetsKipRight, curr, swapPairsPerm);
+      // KIP: rechts = aktuelle, links = nächste (plannedDir)
+      const nextFaceIndex = (plannedDir === +1)
+        ? (faceIndex + 1) % 3
+        : (faceIndex + 2) % 3;
 
-      // KIP: linke Fläche = nächste 4 (W2 nach W1), ebenfalls Paare tauschen
-      const next = sets[(faceIndex + 1) % 3] || sets[1];
-      renderSetIntoTargetsWithPerm(slotTargetsKipLeft, next, swapPairsPerm);
+      const next = sets[nextFaceIndex] || sets[0];
+
+      // >>> nur in KIP paare tauschen <<<
+      const currK = mapForKip(curr);
+      const nextK = mapForKip(next);
+
+      // rechts (aktuell)
+      for(let i=0;i<4;i++){
+        renderNumber(slotTargetsKipRight[i], currK[i]);
+        setDot(slotTargetsKipRight[i], currK[i]);
+      }
+
+      // links (nächste)
+      for(let i=0;i<4;i++){
+        renderNumber(slotTargetsKipLeft[i], nextK[i]);
+        setDot(slotTargetsKipLeft[i], nextK[i]);
+      }
     }
 
     function reroll12(){
@@ -620,25 +657,36 @@
 
       rotIndex  = 0;
       faceIndex = 0;
+      plannedDir = +1;
       applyRotationAndNumbers();
     }
 
     function stepCW(){
+      plannedDir = +1;
+
       rotIndex  = (rotIndex + 1) % 4;
       faceIndex = (faceIndex + 1) % 3;
+
       applyRotationAndNumbers();
     }
 
     function stepCCW(){
+      plannedDir = -1;
+
       rotIndex  = (rotIndex + 3) % 4;
       faceIndex = (faceIndex + 2) % 3;
+
       applyRotationAndNumbers();
     }
 
+    // =========================================================
+    // KIP-TOGGLE
+    // =========================================================
     let kipOn = false;
 
     function setKipMode(on){
       kipOn = !!on;
+
       if(kipOn){
         wFace.style.display = "none";
         kipGroup.style.display = "block";
@@ -648,11 +696,13 @@
       }
     }
 
+    // ===== Buttons =====
     btnMix.addEventListener("click", reroll12);
     btnKip50.addEventListener("click", () => setKipMode(!kipOn));
     btnCW.addEventListener("click", stepCW);
     btnCCW.addEventListener("click", stepCCW);
 
+    // ===== Init =====
     window.addEventListener("load", () => {
       setBoardSquare();
       requestAnimationFrame(setBoardSquare);
